css/style.css
/* Theme */

html,
body {
    width: 100%;
    height: 100%;
}

body {
    font-family: 'Source Sans Pro', sans-serif;
    webkit-tap-highlight-color: #222;
}

a {
    color: #e9e460;
    -webkit-transition: all .35s;
    -moz-transition: all .35s;
    transition: all .35s;
}

a:hover,
a:focus {
    color: #000;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Source Sans Pro', sans-serif;
}

h1, h2 {
  text-align: center;
}

hr {
  display: block;
  -webkit-margin-before: 0.5em;
  -webkit-margin-after: 0.5em;
  -webkit-margin-start: auto;
  -webkit-margin-end: auto;
  border-color: #fff;
  border-width: 3px;
  max-width: 50px;
}

p {
    margin-bottom: 20px;
    font-size: 16px;
    line-height: 1.5;
}

.bg-primary {
    color: #fff;
    background-color: #7b1451;
    font-weight: 600;
}

.bg-blue {
  color: #222;
  font-weight: 600;
  background-color: #73aeef;
}

.bg-light {
    color: #222;
    font-weight: 600;
    background-color: #fff;
}

.text-faded {
    color: rgba(255,255,255,.7);
}

section {
    padding: 100px 0;
}

/* Navbar */

.navbar-default {
    border-color: rgba(34,34,34,.05);
    font-family: 'Source Sans Pro', sans-serif;
    background-color: #fff;
    -webkit-transition: all .35s;
    -moz-transition: all .35s;
    transition: all .35s;
}

.navbar-default .navbar-header .navbar-brand {
    text-transform: uppercase;
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 600;
    color: #2f535e;
}

.navbar-default .navbar-header .navbar-brand:hover,
.navbar-default .navbar-header .navbar-brand:focus {
    color: #2f535e;
}

.navbar-default .nav > li > a,
.navbar-default .nav > li > a:focus {
    text-transform: uppercase;
    font-size: 13px;
    font-weight: 600;
    color: #222;
}

.navbar-default .nav > li > a:hover,
.navbar-default .nav > li > a:focus:hover {
    color: #2f535e;
}

.navbar-default .nav > li.active > a,
.navbar-default .nav > li.active > a:focus {
    color: #fff!important;
    background-color: transparent;
}

.navbar-default .nav > li.active > a:hover,
.navbar-default .nav > li.active > a:focus:hover {
    background-color: transparent;
}

@media(min-width:768px) {
    .navbar-default {
        border-color: rgba(255,255,255,.3);
        background-color: #222;
    }

    .navbar-default .navbar-header .navbar-brand {
        color: rgba(255,255,255,.7);
    }

    .navbar-default .navbar-header .navbar-brand:hover,
    .navbar-default .navbar-header .navbar-brand:focus {
        color: #fff;
    }

    .navbar-default .nav > li > a,
    .navbar-default .nav > li > a:focus {
        color: rgba(255,255,255,.7);
    }

    .navbar-default .nav > li > a:hover,
    .navbar-default .nav > li > a:focus:hover {
        color: #fff;
    }

    .navbar-default.affix {
        border-color: rgba(34,34,34,.05);
        background-color: #fff;
    }

    .navbar-default.affix .navbar-header .navbar-brand {
        font-size: 14px;
        color: #2f535e;
    }

    .navbar-default.affix .navbar-header .navbar-brand:hover,
    .navbar-default.affix .navbar-header .navbar-brand:focus {
        color: #2f535e;
    }

    .navbar-default.affix .nav > li > a,
    .navbar-default.affix .nav > li > a:focus {
        color: #222;
    }

    .navbar-default.affix .nav > li > a:hover,
    .navbar-default.affix .nav > li > a:focus:hover {
        color: #2f535e;
    }
}

::-moz-selection {
    text-shadow: none;
    color: #fff;
    background: #222;
}

::selection {
    text-shadow: none;
    color: #fff;
    background: #222;
}

.section-heading {
    margin-top: 0;
}

/* Banner */

#banner {
  background-image: url("../static/img/banner.png");
  background-size: cover;
  height: 100%;
}

#logo {
  width: 33vh;
  left: 50%;
  position: relative;
  transform: translate(-50%);
}

.event-panel {
  text-align: center;
  color: #fff;
  font-family: 'Source Sans Pro', sans-serif;
}

#title {
  font-weight: 600;
  padding-top: 10px;
  font-size: 48pt;
}

#event-info {
  font-weight: 300;
  font-size: 30pt;
}

@media(min-width:768px) {
  #logo {
    width: 33vh;
    left: 50%;
    position: relative;
    transform: translate(-50%);
  }
}

/* Team */

.bio-box {
    margin: 50px auto 0;
    max-width: 400px;
}

@media(min-width:992px) {
    .bio-box {
        margin: 20px auto 0;
    }
}

.bio-box p {
    margin-bottom: 0;
}

.bio-box img {
	width: 150px;
	height: 150px;
	border-radius: 75px;
	-webkit-border-radius: 75px;
}

/* Sponsors */

#sponsors {
  text-align: center;
}

.sponsor-logo img {
  height: 150px;
  display: block;
  margin: 0 auto;
  clear: right;
  margin-top: 10px;
  margin-bottom: 10px
}

/* Footer */

.footer {
  background-color: #222;
  color: #fff;
}

.fa-facebook-square {
  padding-top: 10px;
  color: #fff;
  font-size: 25px;
}

